fix modal, and skill overflow

--- a/src/components/HorseStats.css
+++ b/src/components/HorseStats.css
@@ -1,11 +1,10 @@
 .horse-stats {
    display: flex;
    width: auto;
-   max-width: 20vw;
-   /* height: 50vh; */
+   max-width: 515px;
    border: 3px solid #dadada;
    border-radius: 12px;
-   padding: 8px;
+   padding: 12px;
    flex-direction: column;
    gap: 10px;
 
@@ -13,7 +12,6 @@
       align-self: flex-start;
       display: flex;
       flex-direction: column;
-      /* border: 1px solid black; */
       margin-bottom: 6px;
    }
 
@@ -104,7 +102,6 @@
 
    .horse-portrait {
       display: flex;
-      /* border: 2px solid rgb(83, 190, 139); */
       border-radius: 6px;
       padding: 0 8px;
 
@@ -118,7 +115,6 @@
 
    .skills-banner {
       text-align: center;
-      /* background-color: #79d823; */
       background:
          linear-gradient(#a8e305, #61ae16) padding-box,
          linear-gradient(#addb3c, #558f18) border-box;
@@ -137,7 +133,6 @@
       width: 100%;
       border-radius: 10px;
       margin: 0;
-      padding: 0;
       border: 2px solid #d6d6d6;
       display: flex;
       flex-grow: 1;
@@ -152,8 +147,7 @@
       display: grid;
       grid-template-columns: auto auto;
       grid-template-rows: auto auto;
-      overflow: scroll;
-      /* grid-auto-flow: column; */
+      /* overflow: scroll; */
    }
 
    /* @media (prefers-color-scheme: dark) {
