--- a/src/components/SkillSelectorModal.css
+++ b/src/components/SkillSelectorModal.css
@@ -1,7 +1,7 @@
 .skills-modal {
    position: absolute;
    display: flex;
-   left: calc(20vw + 60px);
+   left: calc(515px + 60px);
    border: 3px solid #dadada;
    border-radius: 8px;
 
